[gd_scene load_steps=4 format=3 uid="uid://bxd8ry1m7qfxb"]

[ext_resource type="Script" path="res://Main.gd" id="1_main"]
[ext_resource type="Script" path="res://TodoInput.gd" id="2_todoinput"]
[ext_resource type="Script" path="res://TodoList.gd" id="3_todolist"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Header" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
text = "Todo List"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TodoInput" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
theme_override_constants/separation = 10
script = ExtResource("2_todoinput")

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/Header/TodoInput"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "What needs to be done?"

[node name="AddButton" type="Button" parent="MarginContainer/VBoxContainer/Header/TodoInput"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Add"

[node name="TodoList" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10
script = ExtResource("3_todolist")

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TodoList"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TodoList/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="EmptyLabel" type="Label" parent="MarginContainer/VBoxContainer/TodoList"]
visible = false
layout_mode = 2
size_flags_vertical = 3
text = "No todos yet. Add one above!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Footer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="StatsLabel" type="Label" parent="MarginContainer/VBoxContainer/Footer"]
layout_mode = 2
text = "No todos yet"
horizontal_alignment = 1

[node name="Actions" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Footer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ClearCompletedButton" type="Button" parent="MarginContainer/VBoxContainer/Footer/Actions"]
custom_minimum_size = Vector2(150, 35)
layout_mode = 2
disabled = true
text = "Clear Completed"

[node name="ClearAllButton" type="Button" parent="MarginContainer/VBoxContainer/Footer/Actions"]
custom_minimum_size = Vector2(150, 35)
layout_mode = 2
disabled = true
text = "Clear All"
